src/Bek/Frontend/ParserImpl/bekParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 bek.g 2015-10-10 14:21:25

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591

 
using Microsoft.Bek.Frontend.AST; 
using System.Collections.Generic;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;

namespace Microsoft.Bek.Frontend.ParserImpl
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
public partial class bekParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BIG_UNICODE_ESC", "CHAR", "COMMENT", "ESC_SEQ", "HEX_DIGIT", "HEX_SEQ", "ID", "INFIX_ARITHM_OP", "INT", "LSTRING", "OCTAL_ESC", "STRING", "UNARY_OP", "UNICODE_ESC", "WS", "'&&'", "'('", "')'", "'*'", "'+'", "','", "':'", "':='", "';'", "'='", "'==>'", "'['", "']'", "'case'", "'else'", "'end'", "'false'", "'function'", "'if'", "'in'", "'iter'", "'program'", "'raise'", "'replace'", "'return'", "'skip'", "'true'", "'yield'", "'{'", "'||'", "'}'"
	};
	public const int EOF=-1;
	public const int BIG_UNICODE_ESC=4;
	public const int CHAR=5;
	public const int COMMENT=6;
	public const int ESC_SEQ=7;
	public const int HEX_DIGIT=8;
	public const int HEX_SEQ=9;
	public const int ID=10;
	public const int INFIX_ARITHM_OP=11;
	public const int INT=12;
	public const int LSTRING=13;
	public const int OCTAL_ESC=14;
	public const int STRING=15;
	public const int UNARY_OP=16;
	public const int UNICODE_ESC=17;
	public const int WS=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, true, 
				false, false, false, false, false, false, false, false, false, false, 
				false, true, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, 
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public bekParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public bekParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[75+1];


		OnCreated();
	}

	public override string[] TokenNames { get { return bekParser.tokenNames; } }
	public override string GrammarFileName { get { return "bek.g"; } }


	protected override object RecoverFromMismatchedToken(IIntStream input, int ttype, BitSet follow)
	{
	    // just rethrow  
	    throw new MismatchedTokenException(ttype, input);
	}

	public override object RecoverFromMismatchedSet(IIntStream input, RecognitionException e, BitSet follow)
	{
	    // rethrow...
	    throw e; 
	}

	internal List<BekPgm> BekPgms() { return bekPgms(); }

	internal expr Comp_expr() { return comp_expr(); }



	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_bekPgms() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_bekPgms() {}
	// $ANTLR start "bekPgms"
	// bek.g:52:1: bekPgms returns [List<BekPgm> result] : funcs= bekLocalFunctions ( bekPgm )+ EOF ;
	[GrammarRule("bekPgms")]
	private List<BekPgm> bekPgms()
	{
		EnterRule_bekPgms();
		EnterRule("bekPgms", 1);
		TraceIn("bekPgms", 1);
	    List<BekPgm> result = default(List<BekPgm>);

	    int bekPgms_StartIndex = input.Index;

	    List<BekLocalFunction> funcs = default(List<BekLocalFunction>);
	    BekPgm bekPgm1 = default(BekPgm);

	     result = new List<BekPgm>(); 
		try { DebugEnterRule(GrammarFileName, "bekPgms");
		DebugLocation(52, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return result; }

			// bek.g:54:5: (funcs= bekLocalFunctions ( bekPgm )+ EOF )
			DebugEnterAlt(1);
			// bek.g:54:7: funcs= bekLocalFunctions ( bekPgm )+ EOF
			{
			DebugLocation(54, 12);
			PushFollow(Follow._bekLocalFunctions_in_bekPgms111);
			funcs=bekLocalFunctions();
			PopFollow();
			if (state.failed) return result;
			DebugLocation(55, 4);
			// bek.g:55:4: ( bekPgm )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_1 = input.LA(1);

				if ((LA1_1==40))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// bek.g:55:5: bekPgm
					{
					DebugLocation(55, 5);
					PushFollow(Follow._bekPgm_in_bekPgms118);
					bekPgm1=bekPgm();
					PopFollow();
					if (state.failed) return result;
					DebugLocation(55, 12);
					if (state.backtracking == 0)
					{
						 bekPgm1.AddLocalFunctions(funcs); result.Add(bekPgm1); 
					}

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					if (state.backtracking>0) {state.failed=true; return result;}
					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(56, 7);
			Match(input,EOF,Follow._EOF_in_bekPgms131); if (state.failed) return result;

			}

		}

		catch (RecognitionException e) {
		  throw e;
		}
		finally
		{
			TraceOut("bekPgms", 1);
			LeaveRule("bekPgms", 1);
			LeaveRule_bekPgms();
	        if (state.backtracking > 0) { Memoize(input, 1, bekPgms_StartIndex); }

	    }
	 	DebugLocation(57, 4);
		} finally { DebugExitRule(GrammarFileName, "bekPgms"); }
		return result;

	}
	// $ANTLR end "bekPgms"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_bekPgm() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_bekPgm() {}
	// $ANTLR start "bekPgm"
	// bek.g:60:1: bekPgm returns [BekPgm result] : 'program' name= ID '(' str= ID ')' '{' body= statement '}' ;
	[GrammarRule("bekPgm")]
	private BekPgm bekPgm()
	{
		EnterRule_bekPgm();
		EnterRule("bekPgm", 2);
		TraceIn("bekPgm", 2);
	    BekPgm result = default(BekPgm);

	    int bekPgm_StartIndex = input.Index;

	    IToken name = default(IToken);
	    IToken str = default(IToken);
	    stmt body = default(stmt);

		try { DebugEnterRule(GrammarFileName, "bekPgm");
		DebugLocation(60, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return result; }

			// bek.g:61:2: ( 'program' name= ID '(' str= ID ')' '{' body= statement '}' )
			DebugEnterAlt(1);
			// bek.g:61:4: 'program' name= ID '(' str= ID ')' '{' body= statement '}'
			{
			DebugLocation(61, 4);
			Match(input,40,Follow._40_in_bekPgm150); if (state.failed) return result;
			DebugLocation(61, 18);
			name=(IToken)Match(input,ID,Follow._ID_in_bekPgm154); if (state.failed) return result;
			DebugLocation(61, 22);
			Match(input,20,Follow._20_in_bekPgm156); if (state.failed) return result;
			DebugLocation(61, 29);
			str=(IToken)Match(input,ID,Follow._ID_in_bekPgm160); if (state.failed) return result;
			DebugLocation(61, 33);
			Match(input,21,Follow._21_in_bekPgm162); if (state.failed) return result;
			DebugLocation(61, 37);
			Match(input,47,Follow._47_in_bekPgm164); if (state.failed) return result;
			DebugLocation(61, 45);
			PushFollow(Follow._statement_in_bekPgm168);
			body=statement();
			PopFollow();
			if (state.failed) return result;
			DebugLocation(61, 56);
			Match(input,49,Follow._49_in_bekPgm170); if (state.failed) return result;
			DebugLocation(62, 5);
			if (state.backtracking == 0)
			{
				  result = new BekPgm(new ident(name.Text, name.Line, name.CharPositionInLine), new ident(str.Text, str.Line, str.CharPositionInLine), body);
				    
			}

			}

		}

		catch (RecognitionException e) {
		  throw e;
		}
		finally
		{
			TraceOut("bekPgm", 2);
			LeaveRule("bekPgm", 2);
			LeaveRule_bekPgm();
	        if (state.backtracking > 0) { Memoize(input, 2, bekPgm_StartIndex); }

	    }
	 	DebugLocation(64, 1);
		} finally { DebugExitRule(GrammarFileName, "bekPgm"); }
		return result;

	}
	// $ANTLR end "bekPgm"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_bekLocalFunctions() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_bekLocalFunctions() {}
	// $ANTLR start "bekLocalFunctions"
	// bek.g:66:1: bekLocalFunctions returns [List<BekLocalFunction> result] : ( 'function' fname= ID '(' args= ident_list ')' '=' body= comp_expr ';' )* ;
	[GrammarRule("bekLocalFunctions")]
	private List<BekLocalFunction> bekLocalFunctions()
	{
		EnterRule_bekLocalFunctions();
		EnterRule("bekLocalFunctions", 3);
		TraceIn("bekLocalFunctions", 3);
	    List<BekLocalFunction> result = default(List<BekLocalFunction>);

	    int bekLocalFunctions_StartIndex = input.Index;

	    IToken fname = default(IToken);
	    List<ident> args = default(List<ident>);
	    expr body = default(expr);

	     result = new List<BekLocalFunction>(); 
		try { DebugEnterRule(GrammarFileName, "bekLocalFunctions");
		DebugLocation(66, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return result; }

			// bek.g:68:2: ( ( 'function' fname= ID '(' args= ident_list ')' '=' body= comp_expr ';' )* )
			DebugEnterAlt(1);
			// bek.g:68:4: ( 'function' fname= ID '(' args= ident_list ')' '=' body= comp_expr ';' )*
			{
			DebugLocation(68, 4);
			// bek.g:68:4: ( 'function' fname= ID '(' args= ident_list ')' '=' body= comp_expr ';' )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_1 = input.LA(1);

				if ((LA2_1==36))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// bek.g:68:5: 'function' fname= ID '(' args= ident_list ')' '=' body= comp_expr ';'
					{
					DebugLocation(68, 5);
					Match(input,36,Follow._36_in_bekLocalFunctions202); if (state.failed) return result;
					DebugLocation(68, 21);
					fname=(IToken)Match(input,ID,Follow._ID_in_bekLocalFunctions206); if (state.failed) return result;
					DebugLocation(68, 25);
					Match(input,20,Follow._20_in_bekLocalFunctions208); if (state.failed) return result;
					DebugLocation(68, 33);
					PushFollow(Follow._ident_list_in_bekLocalFunctions212);
					args=ident_list();
					PopFollow();
					if (state.failed) return result;
					DebugLocation(68, 45);
					Match(input,21,Follow._21_in_bekLocalFunctions214); if (state.failed) return result;
					DebugLocation(68, 49);
					Match(input,28,Follow._28_in_bekLocalFunctions216); if (state.failed) return result;
					DebugLocation(68, 57);
					PushFollow(Follow._comp_expr_in_bekLocalFunctions220);
					body=comp_expr();
					PopFollow();
					if (state.failed) return result;
					DebugLocation(68, 68);
					Match(input,27,Follow._27_in_bekLocalFunctions222); if (state.failed) return result;
					DebugLocation(69, 6);
					if (state.backtracking == 0)
					{
						 if (result.Find(x => x.id.name.Equals(fname.Text)) != null) 
								  throw new Microsoft.Bek.Frontend.Meta.BekParseException(fname.Line, fname.CharPositionInLine, string.Format("'{0}' duplicate definition", fname.Text));
								  result.Add(new BekLocalFunction(new ident(fname.Text, fname.Line, fname.CharPositionInLine), args.ToArray(), body)); 
					}

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

		}

		catch (RecognitionException e) {
		  throw e;
		}
		finally
		{
			TraceOut("bekLocalFunctions", 3);
			LeaveRule("bekLocalFunctions", 3);
			LeaveRule_bekLocalFunctions();
	        if (state.backtracking > 0) { Memoize(input, 3, bekLocalFunctions_StartIndex); }

	    }
	 	DebugLocation(72, 1);
		} finally { DebugExitRule(GrammarFileName, "bekLocalFunctions"); }
		return result;

	}
	// $ANTLR end "bekLocalFunctions"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_ident_list() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_ident_list() {}
	// $ANTLR start "ident_list"
	// bek.g:74:1: ident_list returns [List<ident> result] : (arg= ID ( ',' arg1= ID )* )? ;
	[GrammarRule("ident_list")]
	private List<ident> ident_list()
	{
		EnterRule_ident_list();
		EnterRule("ident_list", 4);
		TraceIn("ident_list", 4);
	    List<ident> result = default(List<ident>);

	    int ident_list_StartIndex = input.Index;

	    IToken arg = default(IToken);
	    IToken arg1 = default(IToken);

	     result = new List<ident>(); 
		try { DebugEnterRule(GrammarFileName, "ident_list");
		DebugLocation(74, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 4)) { return result; }

			// bek.g:76:2: ( (arg= ID ( ',' arg1= ID )* )? )
			DebugEnterAlt(1);
			// bek.g:76:4: (arg= ID ( ',' arg1= ID )* )?
			{
			DebugLocation(76, 4);
			// bek.g:76:4: (arg= ID ( ',' arg1= ID )* )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			int LA4_1 = input.LA(1);

			if ((LA4_1==ID))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// bek.g:76:5: arg= ID ( ',' arg1= ID )*
				{
				DebugLocation(76, 8);
				arg=(IToken)Match(input,ID,Follow._ID_in_ident_list259); if (state.failed) return result;
				DebugLocation(76, 12);
				if (state.backtracking == 0)
				{
					 result.Add(new ident(arg.Text, arg.Line, arg.CharPositionInLine)); 
				}
				DebugLocation(77, 7);
				// bek.g:77:7: ( ',' arg1= ID )*
				try { DebugEnterSubRule(3);
				while (true)
				{
					int alt3=2;
					try { DebugEnterDecision(3, decisionCanBacktrack[3]);
					int LA3_1 = input.LA(1);

					if ((LA3_1==24))
					{
						alt3 = 1;
					}


					} finally { DebugExitDecision(3); }
					switch ( alt3 )
					{
					case 1:
						DebugEnterAlt(1);
						// bek.g:77:8: ',' arg1= ID
						{
						DebugLocation(77, 8);
						Match(input,24,Follow._24_in_ident_list271); if (state.failed) return result;
						DebugLocation(77, 16);
						arg1=(IToken)Match(input,ID,Follow._ID_in_ident_list275); if (state.failed) return result;
						DebugLocation(78, 7);
						if (state.backtracking == 0)
						{
							 if (result.Find(x => x.name.Equals(arg1.Text)) != null) 
									throw new Microsoft.Bek.Frontend.Meta.BekParseException(arg1.Line, arg1.CharPositionInLine, string.Format("'{0}' duplicate parameter", arg1.Text));
							        result.Add(new ident(arg1.Text, arg1.Line, arg1.CharPositionInLine)); 
						}

						}
						break;

					default:
						goto loop3;
					}
				}

				loop3:
					;

				} finally { DebugExitSubRule(3); }


				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

		}

		catch (RecognitionException e) {
		  throw e;
		}
		finally
		{
			TraceOut("ident_list", 4);
			LeaveRule("ident_list", 4);
			LeaveRule_ident_list();
	        if (state.backtracking > 0) { Memoize(input, 4, ident_list_StartIndex); }

	    }
	 	DebugLocation(81, 1);
		} finally { DebugExitRule(GrammarFileName, "ident_list"); }
		return result;

	}
	// $ANTLR end "ident_list"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_statement() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_statement() {}
	// $ANTLR start "statement"
	// bek.g:87:1: statement returns [stmt result] : ( 'return' exp= iter_expr ';' |repl= 'replace' '{' cases= replace_cases '}' ( ';' )? );
	[GrammarRule("statement")]
	private stmt statement()
	{
		EnterRule_statement();
		EnterRule("statement", 5);
		TraceIn("statement", 5);
	    stmt result = default(stmt);

	    int statement_StartIndex = input.Index;

	    IToken repl = default(IToken);
	    iterexpr exp = default(iterexpr);
	    List<replacecase> cases = default(List<replacecase>);

		try { DebugEnterRule(GrammarFileName, "statement");
		DebugLocation(87, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 5)) { return result; }

			// bek.g:88:2: ( 'return' exp= iter_expr ';' |repl= 'replace' '{' cases= replace_cases '}' ( ';' )? )
			int alt6=2;
			try { DebugEnterDecision(6, decisionCanBacktrack[6]);
			int LA6_1 = input.LA(1);
